fixed ghosted icon images in icon menu where tomato colored icons would linger over the preview/markdown background for a moment - fixed by adding a hidden class when menu toggles the icons go into display none to ensure they do not lag behind the animation of menu closure

--- a/src/Components/Overlay/articleOverlay.module.scss
+++ b/src/Components/Overlay/articleOverlay.module.scss
@@ -11,7 +11,7 @@
 	opacity: 0.99;
 	overflow-y: auto;
 	visibility: hidden;
-	transition: opacity 0.35s, width 0.2s ease, visibility 0.2s;
+	transition: width 0.2s ease, visibility 0.2s;
 }
 .overlay_active {
 	@extend .overlay;
